--- a/address-book-web-tests/build.gradle
+++ b/address-book-web-tests/build.gradle
@@ -1,7 +1,4 @@
 apply plugin: 'java'
-apply plugin: 'application'
-mainClassName = "ru.stqa.pft.sandbox.MyFirstProgram"
-
 
 repositories {
     maven {
@@ -10,4 +7,6 @@ repositories {
 }
 dependencies{
     compile 'org.testng:testng:6.14.3'
+    compile 'org.seleniumhq.selenium:selenium-java:3.141.59'
+
 }
