--- a/.gitignore
+++ b/.gitignore
@@ -22,12 +22,6 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-sandbox/\.gradle/
-sandbox/\.build/
-sandbox/\.idea/
-
-sandbox/build/
-
-address-book-web-tests/\.gradle/4\.10/fileHashes/
-
-address-book-web-tests/build/
+.gradle/
+.idea/
+.build/
